tests/ui/auto-traits/auto-trait-validation.stderr
error[E0567]: auto traits cannot have generic parameters
  --> $DIR/auto-trait-validation.rs:6:14
   |
LL | trait Generic<T> {}
   |       -------^^^ help: remove the parameters
   |       |
   |       auto trait cannot have generic parameters

error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/auto-trait-validation.rs:9:12
   |
LL | trait Bound : Copy {}
   |       -----^^^^^^^ help: remove the super traits or lifetime bounds
   |       |
   |       auto traits cannot have super traits or lifetime bounds

error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/auto-trait-validation.rs:12:20
   |
LL | trait LifetimeBound : 'static {}
   |       -------------^^^^^^^^^^ help: remove the super traits or lifetime bounds
   |       |
   |       auto traits cannot have super traits or lifetime bounds

error[E0380]: auto traits cannot have associated items
  --> $DIR/auto-trait-validation.rs:15:20
   |
LL | trait MyTrait { fn foo() {} }
   |       -------   ---^^^-----
   |       |         |
   |       |         help: remove these associated items
   |       auto traits cannot have associated items

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0380, E0567, E0568.
For more information about an error, try `rustc --explain E0380`.
